Update model build to new framework versions

--- a/notebooks/01 - Eligibility Service Model.ipynb
+++ b/notebooks/01 - Eligibility Service Model.ipynb
@@ -570,17 +570,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "southeast-publisher",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(df.columns.difference(['loan_amnt', 'annual_inc', 'TARGET']), 1, inplace=True)"
+    "df.drop(df.columns.difference(['loan_amnt', 'annual_inc', 'TARGET']), axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "abroad-montreal",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "neither-empire",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "round-field",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "civic-workplace",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "contemporary-lawsuit",
    "metadata": {},
    "outputs": [],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "prostate-victim",
    "metadata": {},
    "outputs": [],
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "governmental-color",
    "metadata": {},
    "outputs": [],
@@ -708,20 +708,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "positive-cookbook",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([0.43863893, 0.41717505, 0.41057277]),\n",
-       " 'score_time': array([0.16725779, 0.17611718, 0.17042708]),\n",
-       " 'test_accuracy': array([0.57198873, 0.57113441, 0.57261517]),\n",
-       " 'test_recall': array([0.47595966, 0.47241285, 0.47260004])}"
+       "{'fit_time': array([0.21319628, 0.1989944 , 0.24020267]),\n",
+       " 'score_time': array([0.03957105, 0.03745604, 0.04434204]),\n",
+       " 'test_accuracy': array([0.57183141, 0.5714152 , 0.57231845]),\n",
+       " 'test_recall': array([0.47597161, 0.47378294, 0.472608  ])}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "minus-objective",
    "metadata": {},
    "outputs": [
@@ -740,10 +740,10 @@
      "data": {
       "text/plain": [
        "array([[  116,    67],\n",
-       "       [69792, 63132]])"
+       "       [69796, 63128]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "honey-perth",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
        "array([0])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -850,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
