--- a/notebooks/03 - Eligibility Service Tracking.ipynb
+++ b/notebooks/03 - Eligibility Service Tracking.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "df = start_df.copy(deep=True)\n",
     "df['TARGET'] = [0 if i=='Default' else 1 for i in df['loan_status']]\n",
-    "df.drop(df.columns.difference(['loan_amnt', 'annual_inc', 'TARGET']), 1, inplace=True)\n",
+    "df.drop(df.columns.difference(['loan_amnt', 'annual_inc', 'TARGET']), axis=1, inplace=True)\n",
     "df = df.dropna()\n",
     "df = pd.get_dummies(df)"
    ]
@@ -155,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
