--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "progressive-sixth",
    "metadata": {},
    "outputs": [
@@ -95,17 +95,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-07-04 13:31:37--  http://eligibility-service:9000/predict\n",
-      "Resolving eligibility-service (eligibility-service)... 10.89.1.2\n",
-      "Connecting to eligibility-service (eligibility-service)|10.89.1.2|:9000... connected.\n",
+      "--2025-11-28 15:19:23--  http://eligibility-service:9000/predict\n",
+      "Resolving eligibility-service (eligibility-service)... 10.89.1.14\n",
+      "Connecting to eligibility-service (eligibility-service)|10.89.1.14|:9000... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 153 [application/json]\n",
+      "Length: 36 [application/json]\n",
       "Saving to: ‘STDOUT’\n",
       "\n",
-      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[1]},\"meta\":{\"metrics\":[{\"key\":\"eligible\",\"type\":\"COUNTER\",\"value\":1},{\"key\":\"not_eligible\",\"type\":\"COUNTER\",\"value\":0}]}}\n",
-      "-                   100%[===================>]     153  --.-KB/s    in 0s      \n",
+      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[1]}}\n",
+      "-                   100%[===================>]      36  --.-KB/s    in 0s      \n",
       "\n",
-      "2025-07-04 13:31:37 (37.8 MB/s) - written to stdout [153/153]\n",
+      "2025-11-28 15:19:23 (10.2 MB/s) - written to stdout [36/36]\n",
       "\n"
      ]
     }
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
