--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -10,81 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6f9eb65",
-   "metadata": {},
-   "source": [
-    "## 1. Serve Model using Gateway API\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fc2036a",
-   "metadata": {},
-   "source": [
-    "### Create Gateway Http Route to Eligibility Service\n",
-    "\n",
-    "Create a new file in the folder `pipelines` named `eligibility-service-route.yml`:\n",
-    "\n",
-    "```yaml\n",
-    "apiVersion: gateway.networking.k8s.io/v1\n",
-    "kind: HTTPRoute\n",
-    "metadata:\n",
-    "  name: eligibility-service-route\n",
-    "spec:\n",
-    "  parentRefs:\n",
-    "    - name: mlprod-gateway\n",
-    "      namespace: envoy-gateway-system\n",
-    "  rules:\n",
-    "    - matches:\n",
-    "        - path:\n",
-    "            type: PathPrefix\n",
-    "            value: /<yourname>\n",
-    "      filters:\n",
-    "        - type: URLRewrite\n",
-    "          urlRewrite:\n",
-    "            path:\n",
-    "              type: ReplacePrefixMatch\n",
-    "              replacePrefixMatch: /\n",
-    "      backendRefs:\n",
-    "        - name: eligibility-service\n",
-    "          port: 9000\n",
-    "```\n",
-    "\n",
-    "Replace `<yourname>` with your name.\n",
-    "\n",
-    "This will create a new route that is exposed over the Api Gateway. Check the deployment state of your model:\n",
-    "\n",
-    "`kubectl get httproute`\n",
-    "\n",
-    "If you see your route is configured you can continue testing."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2a8b025",
-   "metadata": {},
-   "source": [
-    "### Test deployment\n",
-    "\n",
-    "Our dummy deployment can now be accessed using the api gateway. Execute the following line after replacing `<yourname>` with your name.\n",
-    "\n",
-    "You should see something like `{\"data\":{\"names\":[],\"ndarray\":[1]},\"meta\":{\"requestPath\":{\"classifier\":\"....\"}}}`\n",
-    "which is the result of your modelwhich is the result of your model.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffc8e11d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wget -O- mlproduction.dsiag.ch/<yourname>/api/v1.0/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9b4c3d44",
    "metadata": {},
    "source": [
@@ -95,27 +20,19 @@
     "Open Prometheus: http://monitoring.mlproduction.dsiag.ch\n",
     "\n",
     "\n",
-    "To create load, you can execute the following line, after replacing `<yourname>`.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "370d8032",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!NAMESPACE=<yourname> ../services/create-load.sh"
+    "Now use your frontend with different values. Make sure you get rejected and allowed.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aff7d0d8",
+   "id": "7c2b3a29-3246-4883-bf47-988ee1c85447",
    "metadata": {},
    "source": [
-    "Questions: \n",
-    "- Which metrics are collected? \n",
-    "- Are there metrics that are visible in the dashboard but do not update?\n"
+    "**Try to anwer these questions:**\n",
+    "* Which metrics are collected? \n",
+    "* Are there metrics that are visible in the dashboard but do not update?\n",
+    "* Can you find the Prometheus target to your POD?\n",
+    "* do you find the service monitor that configures prometheus to check your POD? What is the condition you need to meet?\n"
    ]
   },
   {
@@ -132,37 +49,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64a3af7e",
-   "metadata": {},
-   "source": [
-    "### Bonus: Reconfigure Kubernetes deployment\n",
-    "\n",
-    "If you want that your Sustaino frontend uses the newly deployed service, you need to change `pipeline/frontend.yml`\n",
-    "\n",
-    "Change\n",
-    "\n",
-    "```yaml\n",
-    "env:\n",
-    "    - name: ELIGIBILITY_API_ENDPOINT\n",
-    "      value: http://eligibility-service:8100/predict\n",
-    "```\n",
-    "\n",
-    "to:\n",
-    "\n",
-    "```yaml\n",
-    "env:\n",
-    "    - name: ELIGIBILITY_API_ENDPOINT\n",
-    "      value: http://mlproduction.dsiag.ch/<yourname>/predict\n",
-    "```\n",
-    "\n",
-    "\n",
-    "Remember to replace `<yourname>`\n",
-    "\n",
-    "Apply the configuration using `kubectl apply -f pipeline/frontend.yml`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "de282059",
    "metadata": {},
    "source": [
@@ -173,6 +59,86 @@
     "You can see that it defines two custom metrics. Are you able to find them in Prometheus?\n",
     "\n",
     "You can query multiple metrics using the Prometheus Query: `{ __name__=~\"metric1|metric2\" }`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b84378f2-18c4-4cad-909b-be63a090736e",
+   "metadata": {},
+   "source": [
+    "To check your local deployment run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c22388d-7b05-41c6-ae97-f9c5f57483ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTP/1.1 200 OK\n",
+      "\u001b[1mServer\u001b[0m: gunicorn\n",
+      "\u001b[1mDate\u001b[0m: Fri, 05 Dec 2025 21:40:27 GMT\n",
+      "\u001b[1mConnection\u001b[0m: close\n",
+      "\u001b[1mContent-Type\u001b[0m: text/plain; version=1.0.0; charset=utf-8; charset=utf-8\n",
+      "\u001b[1mContent-Length\u001b[0m: 2388\n",
+      "\n",
+      "# HELP python_gc_objects_collected_total Objects collected during gc\n",
+      "# TYPE python_gc_objects_collected_total counter\n",
+      "python_gc_objects_collected_total{generation=\"0\"} 586.0\n",
+      "python_gc_objects_collected_total{generation=\"1\"} 174.0\n",
+      "python_gc_objects_collected_total{generation=\"2\"} 0.0\n",
+      "# HELP python_gc_objects_uncollectable_total Uncollectable objects found during GC\n",
+      "# TYPE python_gc_objects_uncollectable_total counter\n",
+      "python_gc_objects_uncollectable_total{generation=\"0\"} 0.0\n",
+      "python_gc_objects_uncollectable_total{generation=\"1\"} 0.0\n",
+      "python_gc_objects_uncollectable_total{generation=\"2\"} 0.0\n",
+      "# HELP python_gc_collections_total Number of times this generation was collected\n",
+      "# TYPE python_gc_collections_total counter\n",
+      "python_gc_collections_total{generation=\"0\"} 77.0\n",
+      "python_gc_collections_total{generation=\"1\"} 6.0\n",
+      "python_gc_collections_total{generation=\"2\"} 0.0\n",
+      "# HELP python_info Python platform information\n",
+      "# TYPE python_info gauge\n",
+      "python_info{implementation=\"CPython\",major=\"3\",minor=\"13\",patchlevel=\"9\",version=\"3.13.9\"} 1.0\n",
+      "# HELP process_virtual_memory_bytes Virtual memory size in bytes.\n",
+      "# TYPE process_virtual_memory_bytes gauge\n",
+      "process_virtual_memory_bytes 1.91094784e+09\n",
+      "# HELP process_resident_memory_bytes Resident memory size in bytes.\n",
+      "# TYPE process_resident_memory_bytes gauge\n",
+      "process_resident_memory_bytes 1.123328e+08\n",
+      "# HELP process_start_time_seconds Start time of the process since unix epoch in seconds.\n",
+      "# TYPE process_start_time_seconds gauge\n",
+      "process_start_time_seconds 1.76496987752e+09\n",
+      "# HELP process_cpu_seconds_total Total user and system CPU time spent in seconds.\n",
+      "# TYPE process_cpu_seconds_total counter\n",
+      "process_cpu_seconds_total 4.14\n",
+      "# HELP process_open_fds Number of open file descriptors.\n",
+      "# TYPE process_open_fds gauge\n",
+      "process_open_fds 11.0\n",
+      "# HELP process_max_fds Maximum number of open file descriptors.\n",
+      "# TYPE process_max_fds gauge\n",
+      "process_max_fds 524288.0\n",
+      "# HELP eligible_total Total eligible prediction results\n",
+      "# TYPE eligible_total counter\n",
+      "eligible_total 0.0\n",
+      "# HELP eligible_created Total eligible prediction results\n",
+      "# TYPE eligible_created gauge\n",
+      "eligible_created 1.764969878406683e+09\n",
+      "# HELP not_eligible_total Total not eligible prediction results\n",
+      "# TYPE not_eligible_total counter\n",
+      "not_eligible_total 0.0\n",
+      "# HELP not_eligible_created Total not eligible prediction results\n",
+      "# TYPE not_eligible_created gauge\n",
+      "not_eligible_created 1.7649698784067006e+09\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -i http://eligibility-service:9000/metrics"
    ]
   }
  ],
@@ -192,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
