--- a/notebooks/07 - Release Strategies.ipynb
+++ b/notebooks/07 - Release Strategies.ipynb
@@ -9,19 +9,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "af775285",
    "metadata": {},
+   "source": [
+    "### Create Gateway Http Route to Eligibility Service\n",
+    "\n",
+    "Create a new file in the folder `pipelines` named `eligibility-service-route.yml`:\n",
+    "\n",
+    "```yaml\n",
+    "apiVersion: gateway.networking.k8s.io/v1\n",
+    "kind: HTTPRoute\n",
+    "metadata:\n",
+    "  name: eligibility-service-route\n",
+    "spec:\n",
+    "  parentRefs:\n",
+    "    - name: mlprod-gateway\n",
+    "      namespace: envoy-gateway-system\n",
+    "  rules:\n",
+    "    - matches:\n",
+    "        - path:\n",
+    "            type: PathPrefix\n",
+    "            value: /<yourname>\n",
+    "      filters:\n",
+    "        - type: URLRewrite\n",
+    "          urlRewrite:\n",
+    "            path:\n",
+    "              type: ReplacePrefixMatch\n",
+    "              replacePrefixMatch: /\n",
+    "      backendRefs:\n",
+    "        - name: eligibility-service\n",
+    "          port: 9000\n",
+    "```\n",
+    "\n",
+    "Replace `<yourname>` with your name.\n",
+    "\n",
+    "This will create a new route that is exposed over the Api Gateway. Check the deployment state of your model:\n",
+    "\n",
+    "`kubectl get httproute`\n",
+    "\n",
+    "If you see your route is configured you can continue testing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb3a2d56-b7c2-4167-836c-c71a5966b4ba",
+   "metadata": {},
+   "source": [
+    "### Test deployment\n",
+    "\n",
+    "Our dummy deployment can now be accessed using the api gateway. Execute the following line after replacing `<yourname>` with your name.\n",
+    "\n",
+    "You should see something like `{\"data\":{\"names\":[],\"ndarray\":[1]},\"meta\":{\"requestPath\":{\"classifier\":\"....\"}}}`\n",
+    "which is the result of your model.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "187f4300-58ca-47cb-b300-0710f56df83e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!wget -O- mlproduction.dsiag.ch/<yourname>/api/v1.0/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d40d116b-10b8-45a0-9650-ed82a4b72001",
+   "metadata": {},
+   "source": [
+    "## Reconfigure Kubernetes deployment\n",
+    "\n",
+    "If you want that your Sustaino frontend uses the newly deployed service, you need to change `pipeline/frontend.yml`\n",
+    "\n",
+    "Change\n",
+    "\n",
+    "```yaml\n",
+    "env:\n",
+    "    - name: ELIGIBILITY_API_ENDPOINT\n",
+    "      value: http://eligibility-service:8100/predict\n",
+    "```\n",
+    "\n",
+    "to:\n",
+    "\n",
+    "```yaml\n",
+    "env:\n",
+    "    - name: ELIGIBILITY_API_ENDPOINT\n",
+    "      value: http://mlproduction.dsiag.ch/<yourname>/predict\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Remember to replace `<yourname>`\n",
+    "\n",
+    "Apply the configuration using `kubectl apply -f pipeline/frontend.yml`"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b306b911",
    "metadata": {},
    "source": [
-    "Reset the previous deployment by executing `kubectl delete deployment eligibility-service-deployment`.\n",
+    "## Deploy two versions of the same service\n",
     "\n",
     "Create a new file in the folder `pipeline` named `ab-eligibility-service-model.yml`:\n",
     "\n",
@@ -248,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
