--- a/notebooks/08 - Fault Tolerance.ipynb
+++ b/notebooks/08 - Fault Tolerance.ipynb
@@ -11,10 +11,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f2d71a",
+   "id": "3b5954e0-b69d-4ad5-a9d8-b7939df006c9",
    "metadata": {},
    "source": [
-    "## Combiner"
+    "## Add a manual guard \n",
+    "\n",
+    "Our compliance department decided, that it is forbidden to give out loans to clients with an income less than 25000.\n",
+    "\n",
+    "To enforce that we need to add a manual guard inside our model. Do that by checking if a income is below 25000 and then override the predicted value with 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "289addfb-bc24-482b-92fc-d37d59d6a926",
+   "metadata": {},
+   "source": [
+    "Update your model class to allow the path to the joblib file to be passed inside a constructor argument. \n",
+    "\n",
+    "After that the following code should run through:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "269c22a4-c415-4e83-9370-92d92af444e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import sys  \n",
+    "from importlib import reload \n",
+    "\n",
+    "sys.path.insert(1, '/home/jovyan/work/services/eligibility')\n",
+    "\n",
+    "import EligibilityModel\n",
+    "\n",
+    "reload(EligibilityModel) # We need to reload the module if you changed it outside of Jupyter\n",
+    "\n",
+    "TEST_MODEL_PATH = '/home/jovyan/work/services/eligibility/eligibility_pipeline.joblib'\n",
+    "\n",
+    "model = EligibilityModel.EligibilityModel(TEST_MODEL_PATH)\n",
+    "loan_amount = 50000\n",
+    "annual_income = 24999\n",
+    "\n",
+    "model.predict(np.array([[loan_amount,annual_income]]))\n"
    ]
   },
   {
@@ -22,186 +73,79 @@
    "id": "a293271f",
    "metadata": {},
    "source": [
-    "To combine the results from multiple models, you can use the Seldon concept of combiners. Combiners aggregate the result of child models to a single response (check https://docs.seldon.io/projects/seldon-core/en/v1.1.0/python/python_component.html#combiners)\n",
+    "Now that you are able to load your model here. Create a unit test and run it in order to verify your changes. We recommend you try to do this Test-First, so you first learn how to call the predict method from inside a test and after that try to make the test green.\n",
     "\n",
-    "You find our combiner in the folder `services/support/seldon-combiner`. Study its source code. When does it return 1?\n",
+    "We suggest these testcases:\n",
+    "1. Income of 30000 for a loan of 50000 should be eligible\n",
+    "2. Income of 1000 for a loan of 50000 should not be eligible\n",
+    "3. Income of 24999 for a loan of 50000 should not be eligible (this should fail at first)\n",
     "\n",
-    "Create a new file in the folder pipelines named `combiners-seldon-model.yml`:\n",
-    "\n",
-    "```yaml\n",
-    "apiVersion: machinelearning.seldon.io/v1alpha2\n",
-    "kind: SeldonDeployment\n",
-    "metadata:\n",
-    "  name: <yourname>-model\n",
-    "spec:\n",
-    "  name: <yourname>-model-deployment\n",
-    "  predictors:\n",
-    "  - componentSpecs:\n",
-    "    - spec:\n",
-    "        containers:\n",
-    "        - name: dummy-classifier\n",
-    "          image: fluescher/sustaino-dummy-service\n",
-    "        - name: real-classifier\n",
-    "          image: gcr.io/academy-300812/<yourname>/eligibility-service:latest\n",
-    "        - name: combiner\n",
-    "          image: fluescher/seldon-combiner\n",
-    "    graph:\n",
-    "      name: combiner\n",
-    "      type: COMBINER\n",
-    "      endpoint:\n",
-    "        type: REST\n",
-    "      children:\n",
-    "      - children: []\n",
-    "        name: dummy-classifier\n",
-    "        type: MODEL\n",
-    "        endpoint:\n",
-    "          type: REST\n",
-    "      - children: []\n",
-    "        name: real-classifier\n",
-    "        type: MODEL\n",
-    "        endpoint:\n",
-    "          type: REST\n",
-    "    name: eligibility\n",
-    "    labels:\n",
-    "      version: v1\n",
-    "    replicas: 1\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Apply this file \n",
-    "`kubectl apply -f combiners-seldon-model.yml`\n",
-    "and wait for all pods to be deployed:\n",
-    "`kubectl get pods`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "33a8c204",
-   "metadata": {},
-   "source": [
-    "Try send different values. Can you produce both results 1 and 0?\n",
-    "\n"
+    "You can use this template:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d869a1cc",
+   "execution_count": 35,
+   "id": "16447149-d843-48a6-ae67-1b150e3c7160",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/bin/bash: yourname: No such file or directory\n"
+      "test_predict_allows_loan_with_income_above_25000 (__main__.TestEligibilityGuard.test_predict_allows_loan_with_income_above_25000) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
      ]
-    }
-   ],
-   "source": [
-    "!wget -O- mlproduction.dsiag.ch/seldon/<yourname>/<yourname>-model/api/v1.0/predictions --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7cdcbde4",
-   "metadata": {},
-   "source": [
-    "Check the logs of the container:\n",
-    "    \n",
-    "You can check the logs of a container using `kubectl logs`.\n",
-    "\n",
-    "To do that you need to copy the name of the pod: `kubectl get pods`\n",
-    "    \n",
-    "Execute `kubectl logs <podname> <containername>`\n",
-    "\n",
-    "eg. `kubectl logs florian-model-eligibility-0-dummy-classifier-post-process-647md7 real-classifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3e29ef2d",
-   "metadata": {},
-   "source": [
-    "## Post Processor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75b7f53c",
-   "metadata": {},
-   "source": [
-    "Before you start with this exercise remove the preview deployment: `kubectl delete -f combiners-seldon-model.yml`\n",
-    "\n",
-    "Sometimes you don't want to output your model result directly. You can use a Post Processor to do that.\n",
-    "\n",
-    "We use a sample Post Processor who does the opposite of the dummy-service: it marks all requests as not eligible. You can have a look at it in `services/support/seldon-postprocess`\n",
-    "\n",
-    "\n",
-    "Create a new file in the folder pipelines named postprocessor-seldon-model.yml:\n",
-    "\n",
-    "```yaml\n",
-    "apiVersion: machinelearning.seldon.io/v1alpha2\n",
-    "kind: SeldonDeployment\n",
-    "metadata:\n",
-    "  name: <yourname>-model\n",
-    "spec:\n",
-    "  name: <yourname>-model-deployment\n",
-    "  predictors:\n",
-    "  - componentSpecs:\n",
-    "    - spec:\n",
-    "        containers:\n",
-    "        - name: dummy-classifier\n",
-    "          image: fluescher/sustaino-dummy-service\n",
-    "        - name: post-process\n",
-    "          image: fluescher/seldon-postprocess\n",
-    "    graph:\n",
-    "      name: dummy-classifier\n",
-    "      type: MODEL\n",
-    "      endpoint:\n",
-    "        type: REST\n",
-    "      children:\n",
-    "      - children: []\n",
-    "        name: post-process\n",
-    "        type: MODEL\n",
-    "        endpoint:\n",
-    "          type: REST\n",
-    "    name: eligibility\n",
-    "    labels:\n",
-    "      version: v1\n",
-    "    replicas: 1\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Apply this file using `kubectl apply -f postprocessor-seldon-model.yml` and wait for all pods to be deployed. \n",
-    "\n",
-    "Send some Requests to the backend:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e21b40e7",
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: yourname: No such file or directory\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x7fa872136330>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!wget -O- mlproduction.dsiag.ch/seldon/<yourname>/<yourname>-model/api/v1.0/predictions --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
+    "import unittest\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "class TestEligibilityGuard(unittest.TestCase):\n",
+    "    \n",
+    "    def test_predict_allows_loan_with_income_above_25000(self):\n",
+    "        wrapper = model = EligibilityModel.EligibilityModel(TEST_MODEL_PATH)\n",
+    "        \n",
+    "        X_input = np.array([\n",
+    "            [50000,  30000]\n",
+    "        ])\n",
+    "\n",
+    "        results = wrapper.predict(X_input)\n",
+    "        \n",
+    "        expected = np.array([1])\n",
+    "        np.testing.assert_array_equal(results, expected)\n",
+    "\n",
+    "# This is needed in order to run it inside Jupyter\n",
+    "# argv parameter ignores Jupyter kernel args\n",
+    "unittest.main(argv=['first-arg-is-ignored'], verbosity=2, exit=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "78eeecc1",
+   "id": "2908638b-def4-4306-aefc-50326e203c16",
    "metadata": {},
    "source": [
-    "Check the logs of both containers."
+    "# Deploy your change\n",
+    "\n",
+    "After you made sure the change works as you expect you can deploy it.\n",
+    "\n",
+    "What deployment method would you choose? Decide and do the deployment."
    ]
   }
  ],
@@ -221,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
