Pin dummy image version

--- a/notebooks/07 - Release Strategies.ipynb
+++ b/notebooks/07 - Release Strategies.ipynb
@@ -172,7 +172,7 @@
     "    spec:\n",
     "      containers:\n",
     "        - name: eligibility\n",
-    "          image: fluescher/sustaino-dummy-service\n",
+    "          image: fluescher/sustaino-dummy-service:2025-hs\n",
     "          ports:\n",
     "            - name: web\n",
     "              containerPort: 9000\n",
