--- a/notebooks/08 - Fault Tolerance.ipynb
+++ b/notebooks/08 - Fault Tolerance.ipynb
@@ -33,17 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "269c22a4-c415-4e83-9370-92d92af444e8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([1])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "16447149-d843-48a6-ae67-1b150e3c7160",
    "metadata": {},
    "outputs": [
@@ -102,12 +109,19 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x7fa872136330>"
+       "<unittest.main.TestProgram at 0x7f98def26ad0>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
