--- a/notebooks/07 - Release Strategies.ipynb
+++ b/notebooks/07 - Release Strategies.ipynb
@@ -67,12 +67,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "187f4300-58ca-47cb-b300-0710f56df83e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2025-12-10 20:25:45--  http://mlproduction.dsiag.ch/fluescher/predict\n",
+      "Resolving mlproduction.dsiag.ch (mlproduction.dsiag.ch)... 34.65.205.210\n",
+      "Connecting to mlproduction.dsiag.ch (mlproduction.dsiag.ch)|34.65.205.210|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 36 [application/json]\n",
+      "Saving to: ‘STDOUT’\n",
+      "\n",
+      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[1]}}\n",
+      "-                   100%[===================>]      36  --.-KB/s    in 0s      \n",
+      "\n",
+      "2025-12-10 20:25:45 (4.23 MB/s) - written to stdout [36/36]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "!wget -O- mlproduction.dsiag.ch/<yourname>/api/v1.0/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
+    "!wget -O- mlproduction.dsiag.ch/<yourname>/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
    ]
   },
   {
@@ -119,22 +138,22 @@
     "apiVersion: apps/v1\n",
     "kind: Deployment\n",
     "metadata:\n",
-    "  name: eligibility-service-deployment\n",
+    "  name: real-eligibility-service-deployment\n",
     "  labels:\n",
-    "    app: eligibility-service\n",
+    "    app: real-eligibility-service\n",
     "spec:\n",
     "  replicas: 1\n",
     "  selector:\n",
     "    matchLabels:\n",
-    "      app: eligibility-service\n",
+    "      app: real-eligibility-service\n",
     "  template:\n",
     "    metadata:\n",
     "      labels:\n",
-    "        app: eligibility-service\n",
+    "        app: real-eligibility-service\n",
     "        monitor: \"true\"\n",
     "    spec:\n",
     "      containers:\n",
-    "        - name: eligibility\n",
+    "        - name: real-eligibility\n",
     "          image:  gcr.io/academy-300812/<yourname>/eligibility-service:latest\n",
     "          ports:\n",
     "            - name: web\n",
@@ -143,10 +162,10 @@
     "kind: Service\n",
     "apiVersion: v1\n",
     "metadata:\n",
-    "  name: eligibility-service\n",
+    "  name: real-eligibility-service\n",
     "spec:\n",
     "  selector:\n",
-    "    app: eligibility-service\n",
+    "    app: real-eligibility-service\n",
     "  ports:\n",
     "    - protocol: TCP\n",
     "      port: 9000\n",
@@ -156,7 +175,7 @@
     "apiVersion: apps/v1\n",
     "kind: Deployment\n",
     "metadata:\n",
-    "  name: eligibility-service-deployment\n",
+    "  name: dummy-eligibility-service-deployment\n",
     "  labels:\n",
     "    app: dummy-eligibility-service\n",
     "spec:\n",
@@ -224,7 +243,7 @@
     "              replacePrefixMatch: /\n",
     "      backendRefs:\n",
     "        # Destination 1 (50%)\n",
-    "        - name: eligibility-service\n",
+    "        - name: real-eligibility-service\n",
     "          port: 9000\n",
     "          weight: 50\n",
     "        # Traffic Destination 2 (50%)\n",
@@ -286,7 +305,7 @@
     "          requestMirror:\n",
     "            backendRef:\n",
     "              kind: Service\n",
-    "              name: eligibility-service\n",
+    "              name: real-eligibility-service\n",
     "              port: 9000\n",
     "      backendRefs:\n",
     "        - name: dummy-eligibility-service\n",
