--- a/notebooks/08 - Fault Tolerance.ipynb
+++ b/notebooks/08 - Fault Tolerance.ipynb
@@ -38,13 +38,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "array([1])"
@@ -92,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "16447149-d843-48a6-ae67-1b150e3c7160",
    "metadata": {},
    "outputs": [
@@ -100,28 +93,46 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_predict_allows_loan_with_income_above_25000 (__main__.TestEligibilityGuard.test_predict_allows_loan_with_income_above_25000) ... ok\n",
+      "test_predict_allows_loan_with_income_above_25000 (__main__.TestEligibilityGuard.test_predict_allows_loan_with_income_above_25000) ... FAIL\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_predict_allows_loan_with_income_above_25000 (__main__.TestEligibilityGuard.test_predict_allows_loan_with_income_above_25000)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_721/4236723552.py\", line 19, in test_predict_allows_loan_with_income_above_25000\n",
+      "    np.testing.assert_array_equal(results, expected)\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/conda/lib/python3.13/site-packages/numpy/testing/_private/utils.py\", line 1054, in assert_array_equal\n",
+      "    assert_array_compare(operator.__eq__, actual, desired, err_msg=err_msg,\n",
+      "    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                         verbose=verbose, header='Arrays are not equal',\n",
+      "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                         strict=strict)\n",
+      "                         ^^^^^^^^^^^^^^\n",
+      "  File \"/opt/conda/lib/python3.13/site-packages/numpy/testing/_private/utils.py\", line 919, in assert_array_compare\n",
+      "    raise AssertionError(msg)\n",
+      "AssertionError: \n",
+      "Arrays are not equal\n",
+      "\n",
+      "Mismatched elements: 1 / 1 (100%)\n",
+      "Max absolute difference among violations: 1\n",
+      "Max relative difference among violations: 1.\n",
+      " ACTUAL: array([0])\n",
+      " DESIRED: array([1])\n",
       "\n",
       "----------------------------------------------------------------------\n",
       "Ran 1 test in 0.002s\n",
       "\n",
-      "OK\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False]\n"
+      "FAILED (failures=1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x7f98def26ad0>"
+       "<unittest.main.TestProgram at 0x7f5b20212190>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,14 +142,16 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
+    "reload(EligibilityModel) # We need to reload the module if you changed it outside of Jupyter\n",
+    "\n",
     "class TestEligibilityGuard(unittest.TestCase):\n",
     "    \n",
     "    def test_predict_allows_loan_with_income_above_25000(self):\n",
     "        wrapper = model = EligibilityModel.EligibilityModel(TEST_MODEL_PATH)\n",
     "        \n",
-    "        X_input = np.array([\n",
-    "            [50000,  30000]\n",
-    "        ])\n",
+    "        X_input = [\n",
+    "            [50000,  24999]\n",
+    "        ]\n",
     "\n",
     "        results = wrapper.predict(X_input)\n",
     "        \n",
