--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "1. Copy dummy service\n",
     "  \n",
-    "  `services/dummy/DummyModel.py`,`services/dummy/requirements.txt` and `services/dummy/Dockerfile` to \n",
+    "  `services/dummy/DummyModel.py`,`services/dummy/requirements.txt`, `services/dummy/ModelService.py` and `services/dummy/Dockerfile` to \n",
     "  `services/eligibility/EligibilityModel.py`, `services/eligibility/requirements.txt` and `services/eligibility/Dockerfile`.\n",
     "2. Copy our model from `notebooks/model/eligibility_model.joblib` to `services/eligibility/elibility_model.joblib`\n",
     "3. Adjust `EligibilityModel.py` to load our pipeline from the joblib file and call our pipeline. Use the function `load` from joblib to load our model. See https://scikit-learn.org/stable/modules/model_persistence.html#python-specific-serialization\n",
