--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Check default metrics\n",
     "\n",
-    "Right after deployment, a selection of basic metrics is already collected by Seldon. \n",
+    "Right after deployment, a selection of basic metrics is already collected. \n",
     "\n",
     "Open Prometheus: http://monitoring.mlproduction.dsiag.ch\n",
     "\n",
@@ -32,7 +32,7 @@
     "* Which metrics are collected? \n",
     "* Are there metrics that are visible in the dashboard but do not update?\n",
     "* Can you find the Prometheus target to your POD?\n",
-    "* do you find the service monitor that configures prometheus to check your POD? What is the condition you need to meet?\n"
+    "* do you find the pod monitor that configures prometheus to check your POD? What is the condition you need to meet?\n"
    ]
   },
   {
