--- a/notebooks/07 - Release Strategies.ipynb
+++ b/notebooks/07 - Release Strategies.ipynb
@@ -42,7 +42,7 @@
     "          port: 9000\n",
     "```\n",
     "\n",
-    "Replace `<yourname>` with your name.\n",
+    "Replace `<yourname>` with your name. Then apply it using `kubectl apply -f pipeline`\n",
     "\n",
     "This will create a new route that is exposed over the Api Gateway. Check the deployment state of your model:\n",
     "\n",
@@ -251,6 +251,8 @@
     "          port: 9000\n",
     "          weight: 50\n",
     "```\n",
+    "\n",
+    "Then apply it to our cluster: `kubectl apply -f pipeline/ab-eligibility-service-route.yml` \n",
     "\n",
     "You can generate load: `NAMESPACE=<yourname> ../services/create-load.sh`\n",
     "\n",
